some fixes and changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,47 @@
   <!-- Links -->
           <li><a href="index.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contacts.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
+
+
+
+ <!-- Connect With Me-->
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Connect With Me</h3>
+          </div>
+          <div class="panel-body">
+            <a href="https://github.com/Abby-N0rmal" target="_blank">
+            <img class="icons" src="assets/images/if_github_401441.png" alt="GitHub">
+          </a>
+          
+          <a href="https://www.linkedin.com/in/amber-girard" target="_blank">
+            <img class="icons" src="assets/images/if_linkedin_334668.png" alt="Linkedin">
+          </a>
+
+          <a href="https://stackexchange.com/users/12364696/amber-girard" target="_blank">
+            <img class="icons" src="assets/images/if_overflow_334695.png" alt="Stack Overflow">
+          </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+   <!-- footer -->
+  <footer class="clearfix bottom">&copy; Copyright 2018 Amber Girard</footer>
+
+  <!-- jQuery CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+  <!-- Bootstrap JavaScript CDN -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
+
+</html>
