--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Links -->
           <li><a href="index.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contacts.html">Contact</a></li>
         </ul>
       </div>
     </div>
