--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-
-    <!-- Navagation Bar -->
+  
+  <!-- Navagation Bar -->
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -38,11 +38,26 @@
       </div>
     </div>
   </nav>
-
-
-
-
- <!-- Connect With Me-->
+ 
+  <!-- About Me -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="page-header">
+          <h1>Portfolio</h1>
+        </div>
+  <!-- Bio pic -->
+        <div class="row">
+          <div class="col-md-12">
+            <img >
+          
+            <p>
+            </p>
+          </div>
+        </div>
+      </div>
+  
+  <!-- Connect With Me-->
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -66,7 +81,7 @@
     </div>
   </div>
 
-   <!-- footer -->
+  <!-- footer -->
   <footer class="clearfix bottom">&copy; Copyright 2018 Amber Girard</footer>
 
   <!-- jQuery CDN -->
