more and more changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,23 +39,35 @@
     </div>
   </nav>
  
-  <!-- About Me -->
+  <!-- Portfolio Header -->
   <div class="container">
     <div class="row">
       <div class="col-md-8">
         <div class="page-header">
           <h1>Portfolio</h1>
         </div>
-  <!-- Bio pic -->
+  <!-- Column left Pics -->
         <div class="row">
-          <div class="col-md-12">
-            <img >
-          
-            <p>
-            </p>
+          <div class="col-md-6">
+            <div class= "row">
+              <img src="assets/images/Fredy02.jpg" alt="fredy" class="portleft-img">
+              </div>
+            <div class="row">
+               <img src="assets/images/Kids.jpg" alt="Kids" class="portleft-img">
+            </div> 
+          </div>
+   <!-- Column right Pics -->
+          <div class="col-md-6">
+            <div class= "row">
+              <img src="assets/images/doggos.jpg" alt="doggos" class="portright-img">
+            </div>
+            <div class="row">
+              <img src="assets/images/drawing.jpg" alt="drawing" class="portright-img">
+            </div>
           </div>
         </div>
       </div>
+  
   
   <!-- Connect With Me-->
       <div class="col-md-4">
