--- a/contacts.html
+++ b/contacts.html
@@ -49,10 +49,12 @@
   <!-- Bio pic -->
         <div class="row">
           <div class="col-md-12">
-            <img >
+            <!--<img > -->
           
             <p>
-              
+             The only prerequisite is that it makes you happy. If it makes you happy then it's good. From all of us here, I want to wish you happy painting and God bless, my friends. Anything you want to do you can do here. How do you make a round circle with a square knife? That's your challenge for the day. It's a good way of getting rid of all your anxieties and hostilities.
+
+              Those great big fluffy clouds. Any little thing can be your friend if you let it be. Let's give him a friend too. Everybody needs a friend. There is immense joy in just watching - watching all the little creatures in nature. Maybe there's a happy little Evergreen that lives here. Now let's put some happy little clouds in here.
             </p>
           </div>
         </div>
