--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <img src="assets/images/AboutMe.jpg" class="pic" alt="Abby" height="150" width="150">
           
             <p>
-              The only prerequisite is that it makes you happy. If it makes you happy then it's good. From all of us here, I want to wish you happy painting and God bless, my friends. Anything you want to do you can do here. How do you make a round circle with a square knife? That's your challenge for the day. It's a good way of getting rid of all your anxieties and hostilities.
-
-              Those great big fluffy clouds. Any little thing can be your friend if you let it be. Let's give him a friend too. Everybody needs a friend. There is immense joy in just watching - watching all the little creatures in nature. Maybe there's a happy little Evergreen that lives here. Now let's put some happy little clouds in here.
+              In the past I have tinkered with code when I ran a video game server and had to add in mods for our gaming community. I edited and helped create scripts, and we used github to share the code. This got me extremely interested in coding outside of games.<br><br>
+              After working in the construction industry and seeing the need for applications that could be implemented for inventory systems that would greatly improve these companies, I decided to persue further education in development.<br><br>
+              I'm very artistic, and I love to put my imagination and ideas to good use and particularly enjoy the front end aspects of coding, the things you can see that engage the user!
             </p>
           </div>
         </div>
