--- a/portfolio.html
+++ b/portfolio.html
@@ -50,19 +50,32 @@
         <div class="row">
           <div class="col-md-6">
             <div class= "row">
-              <img src="assets/images/Fredy02.jpg" alt="fredy" class="portleft-img">
+              <a href="https://github.com/Abby-N0rmal/ClickyGame" target="_blank">
+              <img src="assets/images/clickygame.jpg" alt="clickygame" class="portleft-img">
               </div>
             <div class="row">
-               <img src="assets/images/Kids.jpg" alt="Kids" class="portleft-img">
+              <a href="https://abby-n0rmal.github.io/GifTastic/" target="_blank">
+               <img src="assets/images/giphysearch.jpg" alt="giphysearch" class="portleft-img">
             </div> 
+            <div class="row">
+              <a href="https://abby-n0rmal.github.io/TrainApp/" target="_blank">
+              <img src="assets/images/trainschedule.jpg" alt="trainschedule" class="portleft-img">
+            </div>
           </div>
    <!-- Column right Pics -->
           <div class="col-md-6">
             <div class= "row">
-              <img src="assets/images/Doggos.jpg" alt="Doggos" class="portright-img">
+              <a href="https://improv-writing.herokuapp.com/" target="_blank">
+              <img src="assets/images/gifstories.jpg" alt="gifstories" class="portright-img">
             </div>
             <div class="row">
-              <img src="assets/images/drawing.jpg" alt="drawing" class="portright-img">
+              <a href="https://github.com/Abby-N0rmal/mongoscraper" target="_blank">
+              <img src="assets/images/mongoscraper.jpg" alt="mongoscraper" class="portright-img">
+            </div>
+            <div class="row">
+               <a href="https://github.com/Abby-N0rmal/friend-finder" target="_blank">
+              
+              <img src="assets/images/friendfinder.jpg" alt="friendfinder" class="portright-img">
             </div>
           </div>
         </div>
