--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,9 @@
               <img src="assets/images/mongoscraper.jpg" alt="mongoscraper" class="portright-img">
             </div>
             <div class="row">
-               <a href="https://github.com/Abby-N0rmal/friend-finder" target="_blank">
+               <a href="https://march-project.github.io/Project-One-March/" target="_blank">
               
-              <img src="assets/images/friendfinder.jpg" alt="friendfinder" class="portright-img">
+              <img src="assets/images/agrarian.jpg" alt="agrarian" class="portright-img">
             </div>
           </div>
         </div>
